--- a/Multi_taskModel.ipynb
+++ b/Multi_taskModel.ipynb
@@ -131,7 +131,7 @@
     "        self.out_layer_tags = nn.Linear(lstm_hidden_dim * 2, tags_count)       \n",
     "\n",
     "    def forward(self, inputs):\n",
-    "        projections =  self.dropout(self.embeddings_layer(inputs))\n",
+    "        projections = self.dropout(self.embeddings_layer(inputs))\n",
     "        output_lstm, (final_hidden_state, _) = self.lstm_layer(projections)\n",
     "        \n",
     "        hidden = self.dropout(torch.cat([final_hidden_state[0], final_hidden_state[1]], dim=1))\n",
@@ -337,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision = 95.10%, Recall = 93.53%, F1 = 94.31%\n"
+      "Precision = 61.09%, Recall = 59.94%, F1 = 60.51%\n"
      ]
     }
    ],
@@ -362,12 +362,12 @@
     "            pred = pred[0].transpose(0, 1)\n",
     "            pred = pred.argmax(dim=2)\n",
     "            pred = list(map(lambda x: list(map(lambda y: tags_field.vocab.itos[y], x)), pred))\n",
-    "            pred = list(map(lambda x: list(map(lambda y: y if y != '<pad>' else \"_UNK_\", x)), pred))\n",
+    "            pred = list(map(lambda x: list(map(lambda y: y if y != '<pad>' else \"\", x)), pred))\n",
     "            pred = list(map(lambda x: ' '.join(x), pred))\n",
     "            pred = '\\n'.join(pred)\n",
     "                      \n",
     "            true = list(map(lambda x: list(map(lambda y: tags_field.vocab.itos[y], x)), batch.tags))\n",
-    "            true = list(map(lambda x: list(map(lambda y: y if y != '<pad>' else \"_UNK_\", x)), true))  \n",
+    "            true = list(map(lambda x: list(map(lambda y: y if y != '<pad>' else \"\", x)), true))  \n",
     "            true = list(map(lambda x: ' '.join(x), true))\n",
     "            true = '\\n'.join(true)\n",
     "            \n",
