--- a/TokenTaggerModel.ipynb
+++ b/TokenTaggerModel.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# !pip -qq install torchtext==0.3.1\n",
     "# !git clone https://github.com/MiuLab/SlotGated-SLU.git\n",
-    "!wget -qq https://raw.githubusercontent.com/yandexdataschool/nlp_course/master/week08_multitask/conlleval.py"
+    "# !wget -qq https://raw.githubusercontent.com/yandexdataschool/nlp_course/master/week08_multitask/conlleval.py"
    ]
   },
   {
@@ -351,14 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision = 96.35%, Recall = 95.44%, F1 = 95.89%\n"
+      "Precision = 95.08%, Recall = 94.87%, F1 = 94.97%\n"
      ]
     }
    ],
@@ -385,7 +385,6 @@
     "  \n",
     "            pred_seqs.append(pred)\n",
     "            true_seqs.append(true)\n",
-    "            break\n",
     "            \n",
     "    print('Precision = {:.2f}%, Recall = {:.2f}%, F1 = {:.2f}%'.format(*evaluate(true_seqs, pred_seqs, verbose=False)))\n",
     "\n",
