--- a/IntentClassifierModel.ipynb
+++ b/IntentClassifierModel.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,6 +153,7 @@
     "        self.model = model\n",
     "        self.criterion = criterion\n",
     "        self.optimizer = optimizer\n",
+    "        self.best_valid_loss = float('inf')\n",
     "        \n",
     "    def on_epoch_begin(self, is_train, name, batches_count):\n",
     "        \"\"\"\n",
@@ -169,7 +170,12 @@
     "    def on_epoch_end(self):\n",
     "        \"\"\"\n",
     "        Outputs final metrics\n",
-    "        \"\"\"\n",
+    "        \"\"\"        \n",
+    "        valid_loss = self.epoch_loss / self.batches_count\n",
+    "        if not(self.is_train) and valid_loss < self.best_valid_loss:\n",
+    "            self.best_valid_loss = valid_loss\n",
+    "            torch.save(self.model, 'TokenTaggerModel.pt')\n",
+    "            \n",
     "        return '{:>5s} Loss = {:.5f}, Accuracy = {:.2%}'.format(\n",
     "            self.name, self.epoch_loss / self.batches_count, self.correct_count / self.total_count\n",
     "        )\n",
@@ -225,77 +231,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[1 / 30] Train: Loss = 0.88309, Accuracy = 79.41%: 100%|██████████| 140/140 [00:01<00:00, 104.95it/s]\n",
-      "[1 / 30]   Val: Loss = 0.57138, Accuracy = 84.60%: 100%|██████████| 4/4 [00:00<00:00, 100.00it/s]\n",
-      "[2 / 30] Train: Loss = 0.36838, Accuracy = 90.87%: 100%|██████████| 140/140 [00:01<00:00, 122.91it/s]\n",
-      "[2 / 30]   Val: Loss = 0.34991, Accuracy = 90.20%: 100%|██████████| 4/4 [00:00<00:00, 133.34it/s]\n",
-      "[3 / 30] Train: Loss = 0.21992, Accuracy = 94.26%: 100%|██████████| 140/140 [00:01<00:00, 120.17it/s]\n",
-      "[3 / 30]   Val: Loss = 0.25203, Accuracy = 93.20%: 100%|██████████| 4/4 [00:00<00:00, 133.35it/s]\n",
-      "[4 / 30] Train: Loss = 0.14143, Accuracy = 96.36%: 100%|██████████| 140/140 [00:01<00:00, 120.48it/s]\n",
-      "[4 / 30]   Val: Loss = 0.21186, Accuracy = 94.80%: 100%|██████████| 4/4 [00:00<00:00, 129.03it/s]\n",
-      "[5 / 30] Train: Loss = 0.09801, Accuracy = 97.45%: 100%|██████████| 140/140 [00:01<00:00, 121.21it/s]\n",
-      "[5 / 30]   Val: Loss = 0.18984, Accuracy = 96.20%: 100%|██████████| 4/4 [00:00<00:00, 133.34it/s]\n",
-      "[6 / 30] Train: Loss = 0.06315, Accuracy = 98.66%: 100%|██████████| 140/140 [00:01<00:00, 116.38it/s]\n",
-      "[6 / 30]   Val: Loss = 0.17939, Accuracy = 96.00%: 100%|██████████| 4/4 [00:00<00:00, 117.65it/s]\n",
-      "[7 / 30] Train: Loss = 0.04385, Accuracy = 99.13%: 100%|██████████| 140/140 [00:01<00:00, 121.95it/s]\n",
-      "[7 / 30]   Val: Loss = 0.18530, Accuracy = 95.80%: 100%|██████████| 4/4 [00:00<00:00, 128.95it/s]\n",
-      "[8 / 30] Train: Loss = 0.03734, Accuracy = 99.17%: 100%|██████████| 140/140 [00:01<00:00, 125.00it/s]\n",
-      "[8 / 30]   Val: Loss = 0.16391, Accuracy = 96.80%: 100%|██████████| 4/4 [00:00<00:00, 133.33it/s]\n",
-      "[9 / 30] Train: Loss = 0.03253, Accuracy = 99.33%: 100%|██████████| 140/140 [00:01<00:00, 129.39it/s]\n",
-      "[9 / 30]   Val: Loss = 0.17493, Accuracy = 96.40%: 100%|██████████| 4/4 [00:00<00:00, 133.33it/s]\n",
-      "[10 / 30] Train: Loss = 0.01854, Accuracy = 99.67%: 100%|██████████| 140/140 [00:01<00:00, 127.39it/s]\n",
-      "[10 / 30]   Val: Loss = 0.16834, Accuracy = 96.80%: 100%|██████████| 4/4 [00:00<00:00, 133.32it/s]\n",
-      "[11 / 30] Train: Loss = 0.00906, Accuracy = 99.91%: 100%|██████████| 140/140 [00:01<00:00, 126.02it/s]\n",
-      "[11 / 30]   Val: Loss = 0.17602, Accuracy = 96.60%: 100%|██████████| 4/4 [00:00<00:00, 133.32it/s]\n",
-      "[12 / 30] Train: Loss = 0.00932, Accuracy = 99.91%: 100%|██████████| 140/140 [00:01<00:00, 125.45it/s]\n",
-      "[12 / 30]   Val: Loss = 0.17501, Accuracy = 96.40%: 100%|██████████| 4/4 [00:00<00:00, 137.92it/s]\n",
-      "[13 / 30] Train: Loss = 0.00548, Accuracy = 99.89%: 100%|██████████| 140/140 [00:01<00:00, 125.34it/s]\n",
-      "[13 / 30]   Val: Loss = 0.16634, Accuracy = 96.60%: 100%|██████████| 4/4 [00:00<00:00, 142.86it/s]\n",
-      "[14 / 30] Train: Loss = 0.00416, Accuracy = 99.93%: 100%|██████████| 140/140 [00:01<00:00, 123.46it/s]\n",
-      "[14 / 30]   Val: Loss = 0.16788, Accuracy = 96.20%: 100%|██████████| 4/4 [00:00<00:00, 129.02it/s]\n",
-      "[15 / 30] Train: Loss = 0.00299, Accuracy = 99.98%: 100%|██████████| 140/140 [00:01<00:00, 121.63it/s]\n",
-      "[15 / 30]   Val: Loss = 0.17924, Accuracy = 96.40%: 100%|██████████| 4/4 [00:00<00:00, 133.25it/s]\n",
-      "[16 / 30] Train: Loss = 0.00223, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 126.93it/s]\n",
-      "[16 / 30]   Val: Loss = 0.18795, Accuracy = 96.40%: 100%|██████████| 4/4 [00:00<00:00, 133.33it/s]\n",
-      "[17 / 30] Train: Loss = 0.00200, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 127.16it/s]\n",
-      "[17 / 30]   Val: Loss = 0.18323, Accuracy = 96.20%: 100%|██████████| 4/4 [00:00<00:00, 142.71it/s]\n",
-      "[18 / 30] Train: Loss = 0.00147, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 122.70it/s]\n",
-      "[18 / 30]   Val: Loss = 0.18298, Accuracy = 96.20%: 100%|██████████| 4/4 [00:00<00:00, 108.10it/s]\n",
-      "[19 / 30] Train: Loss = 0.00132, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 119.56it/s]\n",
-      "[19 / 30]   Val: Loss = 0.18634, Accuracy = 96.00%: 100%|██████████| 4/4 [00:00<00:00, 111.11it/s]\n",
-      "[20 / 30] Train: Loss = 0.00115, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 114.38it/s]\n",
-      "[20 / 30]   Val: Loss = 0.19346, Accuracy = 96.40%: 100%|██████████| 4/4 [00:00<00:00, 108.10it/s]\n",
-      "[21 / 30] Train: Loss = 0.00117, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 111.73it/s]\n",
-      "[21 / 30]   Val: Loss = 0.19383, Accuracy = 96.60%: 100%|██████████| 4/4 [00:00<00:00, 148.15it/s]\n",
-      "[22 / 30] Train: Loss = 0.00072, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 119.45it/s]\n",
-      "[22 / 30]   Val: Loss = 0.18953, Accuracy = 96.40%: 100%|██████████| 4/4 [00:00<00:00, 117.64it/s]\n",
-      "[23 / 30] Train: Loss = 0.00072, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 121.32it/s]\n",
-      "[23 / 30]   Val: Loss = 0.19549, Accuracy = 96.20%: 100%|██████████| 4/4 [00:00<00:00, 137.94it/s]\n",
-      "[24 / 30] Train: Loss = 0.00052, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 116.76it/s]\n",
-      "[24 / 30]   Val: Loss = 0.19524, Accuracy = 96.20%: 100%|██████████| 4/4 [00:00<00:00, 142.86it/s]\n",
-      "[25 / 30] Train: Loss = 0.00054, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 120.69it/s]\n",
-      "[25 / 30]   Val: Loss = 0.19792, Accuracy = 96.20%: 100%|██████████| 4/4 [00:00<00:00, 137.92it/s]\n",
-      "[26 / 30] Train: Loss = 0.00045, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 121.95it/s]\n",
-      "[26 / 30]   Val: Loss = 0.20020, Accuracy = 96.20%: 100%|██████████| 4/4 [00:00<00:00, 142.85it/s]\n",
-      "[27 / 30] Train: Loss = 0.00079, Accuracy = 99.98%: 100%|██████████| 140/140 [00:01<00:00, 119.45it/s]\n",
-      "[27 / 30]   Val: Loss = 0.21164, Accuracy = 95.80%: 100%|██████████| 4/4 [00:00<00:00, 142.86it/s]\n",
-      "[28 / 30] Train: Loss = 0.00042, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 121.11it/s]\n",
-      "[28 / 30]   Val: Loss = 0.20489, Accuracy = 96.00%: 100%|██████████| 4/4 [00:00<00:00, 148.15it/s]\n",
-      "[29 / 30] Train: Loss = 0.00034, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 123.68it/s]\n",
-      "[29 / 30]   Val: Loss = 0.21073, Accuracy = 96.00%: 100%|██████████| 4/4 [00:00<00:00, 142.86it/s]\n",
-      "[30 / 30] Train: Loss = 0.00032, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 122.06it/s]\n",
-      "[30 / 30]   Val: Loss = 0.21687, Accuracy = 95.80%: 100%|██████████| 4/4 [00:00<00:00, 148.15it/s]\n"
+      "[1 / 30] Train: Loss = 0.86141, Accuracy = 79.83%: 100%|██████████| 140/140 [00:01<00:00, 86.47it/s]\n",
+      "[1 / 30]   Val: Loss = 0.59332, Accuracy = 84.00%: 100%|██████████| 4/4 [00:00<00:00, 57.13it/s]\n",
+      "[2 / 30] Train: Loss = 0.34302, Accuracy = 90.96%: 100%|██████████| 140/140 [00:01<00:00, 92.53it/s]\n",
+      "[2 / 30]   Val: Loss = 0.34501, Accuracy = 91.20%: 100%|██████████| 4/4 [00:00<00:00, 71.43it/s]\n",
+      "[3 / 30] Train: Loss = 0.21151, Accuracy = 94.62%: 100%|██████████| 140/140 [00:01<00:00, 91.92it/s]\n",
+      "[3 / 30]   Val: Loss = 0.23749, Accuracy = 94.80%: 100%|██████████| 4/4 [00:00<00:00, 70.14it/s]\n",
+      "[4 / 30] Train: Loss = 0.13928, Accuracy = 96.56%: 100%|██████████| 140/140 [00:01<00:00, 92.66it/s]\n",
+      "[4 / 30]   Val: Loss = 0.22045, Accuracy = 94.40%: 100%|██████████| 4/4 [00:00<00:00, 69.00it/s]\n",
+      "[5 / 30] Train: Loss = 0.10832, Accuracy = 97.68%: 100%|██████████| 140/140 [00:01<00:00, 92.84it/s]\n",
+      "[5 / 30]   Val: Loss = 0.16394, Accuracy = 96.00%: 100%|██████████| 4/4 [00:00<00:00, 65.57it/s]\n",
+      "[6 / 30] Train: Loss = 0.07198, Accuracy = 98.35%: 100%|██████████| 140/140 [00:01<00:00, 93.27it/s]\n",
+      "[6 / 30]   Val: Loss = 0.15956, Accuracy = 96.40%: 100%|██████████| 4/4 [00:00<00:00, 72.69it/s]\n",
+      "[7 / 30] Train: Loss = 0.05485, Accuracy = 98.75%: 100%|██████████| 140/140 [00:01<00:00, 93.71it/s]\n",
+      "[7 / 30]   Val: Loss = 0.14631, Accuracy = 97.20%: 100%|██████████| 4/4 [00:00<00:00, 70.20it/s]\n",
+      "[8 / 30] Train: Loss = 0.03336, Accuracy = 99.26%: 100%|██████████| 140/140 [00:01<00:00, 92.72it/s]\n",
+      "[8 / 30]   Val: Loss = 0.17048, Accuracy = 96.20%: 100%|██████████| 4/4 [00:00<00:00, 76.92it/s]\n",
+      "[9 / 30] Train: Loss = 0.02494, Accuracy = 99.46%: 100%|██████████| 140/140 [00:01<00:00, 91.20it/s]\n",
+      "[9 / 30]   Val: Loss = 0.15482, Accuracy = 97.00%: 100%|██████████| 4/4 [00:00<00:00, 78.39it/s]\n",
+      "[10 / 30] Train: Loss = 0.01611, Accuracy = 99.67%: 100%|██████████| 140/140 [00:01<00:00, 91.03it/s]\n",
+      "[10 / 30]   Val: Loss = 0.17493, Accuracy = 96.60%: 100%|██████████| 4/4 [00:00<00:00, 75.51it/s]\n",
+      "[11 / 30] Train: Loss = 0.01346, Accuracy = 99.67%: 100%|██████████| 140/140 [00:01<00:00, 92.78it/s]\n",
+      "[11 / 30]   Val: Loss = 0.16528, Accuracy = 96.80%: 100%|██████████| 4/4 [00:00<00:00, 76.92it/s]\n",
+      "[12 / 30] Train: Loss = 0.01278, Accuracy = 99.78%: 100%|██████████| 140/140 [00:01<00:00, 92.90it/s]\n",
+      "[12 / 30]   Val: Loss = 0.15328, Accuracy = 97.00%: 100%|██████████| 4/4 [00:00<00:00, 75.51it/s]\n",
+      "[13 / 30] Train: Loss = 0.01053, Accuracy = 99.84%: 100%|██████████| 140/140 [00:01<00:00, 92.59it/s]\n",
+      "[13 / 30]   Val: Loss = 0.13283, Accuracy = 97.40%: 100%|██████████| 4/4 [00:00<00:00, 70.17it/s]\n",
+      "[14 / 30] Train: Loss = 0.01141, Accuracy = 99.80%: 100%|██████████| 140/140 [00:01<00:00, 91.33it/s]\n",
+      "[14 / 30]   Val: Loss = 0.12004, Accuracy = 97.80%: 100%|██████████| 4/4 [00:00<00:00, 71.43it/s]\n",
+      "[15 / 30] Train: Loss = 0.02111, Accuracy = 99.53%: 100%|██████████| 140/140 [00:01<00:00, 92.23it/s]\n",
+      "[15 / 30]   Val: Loss = 0.13193, Accuracy = 97.00%: 100%|██████████| 4/4 [00:00<00:00, 75.42it/s]\n",
+      "[16 / 30] Train: Loss = 0.00489, Accuracy = 99.98%: 100%|██████████| 140/140 [00:01<00:00, 92.47it/s]\n",
+      "[16 / 30]   Val: Loss = 0.13635, Accuracy = 96.80%: 100%|██████████| 4/4 [00:00<00:00, 76.89it/s]\n",
+      "[17 / 30] Train: Loss = 0.00335, Accuracy = 99.98%: 100%|██████████| 140/140 [00:01<00:00, 91.44it/s]\n",
+      "[17 / 30]   Val: Loss = 0.13738, Accuracy = 97.20%: 100%|██████████| 4/4 [00:00<00:00, 70.18it/s]\n",
+      "[18 / 30] Train: Loss = 0.00253, Accuracy = 99.98%: 100%|██████████| 140/140 [00:01<00:00, 91.38it/s]\n",
+      "[18 / 30]   Val: Loss = 0.14119, Accuracy = 97.20%: 100%|██████████| 4/4 [00:00<00:00, 76.96it/s]\n",
+      "[19 / 30] Train: Loss = 0.00180, Accuracy = 99.98%: 100%|██████████| 140/140 [00:01<00:00, 90.67it/s]\n",
+      "[19 / 30]   Val: Loss = 0.13694, Accuracy = 97.60%: 100%|██████████| 4/4 [00:00<00:00, 78.43it/s]\n",
+      "[20 / 30] Train: Loss = 0.00176, Accuracy = 99.98%: 100%|██████████| 140/140 [00:01<00:00, 92.41it/s]\n",
+      "[20 / 30]   Val: Loss = 0.14313, Accuracy = 97.40%: 100%|██████████| 4/4 [00:00<00:00, 75.52it/s]\n",
+      "[21 / 30] Train: Loss = 0.00175, Accuracy = 99.98%: 100%|██████████| 140/140 [00:01<00:00, 90.32it/s]\n",
+      "[21 / 30]   Val: Loss = 0.14257, Accuracy = 97.40%: 100%|██████████| 4/4 [00:00<00:00, 72.73it/s]\n",
+      "[22 / 30] Train: Loss = 0.00184, Accuracy = 99.98%: 100%|██████████| 140/140 [00:01<00:00, 88.83it/s]\n",
+      "[22 / 30]   Val: Loss = 0.13975, Accuracy = 97.40%: 100%|██████████| 4/4 [00:00<00:00, 68.93it/s]\n",
+      "[23 / 30] Train: Loss = 0.00103, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 91.21it/s]\n",
+      "[23 / 30]   Val: Loss = 0.14596, Accuracy = 97.20%: 100%|██████████| 4/4 [00:00<00:00, 72.73it/s]\n",
+      "[24 / 30] Train: Loss = 0.00103, Accuracy = 99.98%: 100%|██████████| 140/140 [00:01<00:00, 90.38it/s]\n",
+      "[24 / 30]   Val: Loss = 0.14541, Accuracy = 97.00%: 100%|██████████| 4/4 [00:00<00:00, 57.14it/s]\n",
+      "[25 / 30] Train: Loss = 0.00110, Accuracy = 99.98%: 100%|██████████| 140/140 [00:01<00:00, 90.67it/s]\n",
+      "[25 / 30]   Val: Loss = 0.14514, Accuracy = 97.20%: 100%|██████████| 4/4 [00:00<00:00, 74.07it/s]\n",
+      "[26 / 30] Train: Loss = 0.00064, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 91.50it/s]\n",
+      "[26 / 30]   Val: Loss = 0.14816, Accuracy = 97.20%: 100%|██████████| 4/4 [00:00<00:00, 72.73it/s]\n",
+      "[27 / 30] Train: Loss = 0.00050, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 91.09it/s]\n",
+      "[27 / 30]   Val: Loss = 0.15505, Accuracy = 97.20%: 100%|██████████| 4/4 [00:00<00:00, 71.43it/s]\n",
+      "[28 / 30] Train: Loss = 0.00047, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 91.09it/s]\n",
+      "[28 / 30]   Val: Loss = 0.14722, Accuracy = 97.20%: 100%|██████████| 4/4 [00:00<00:00, 80.00it/s]\n",
+      "[29 / 30] Train: Loss = 0.00043, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 90.03it/s]\n",
+      "[29 / 30]   Val: Loss = 0.15662, Accuracy = 97.20%: 100%|██████████| 4/4 [00:00<00:00, 76.92it/s]\n",
+      "[30 / 30] Train: Loss = 0.00034, Accuracy = 100.00%: 100%|██████████| 140/140 [00:01<00:00, 90.56it/s]\n",
+      "[30 / 30]   Val: Loss = 0.15419, Accuracy = 97.40%: 100%|██████████| 4/4 [00:00<00:00, 75.52it/s]\n"
      ]
     }
    ],
    "source": [
+    "pad_idx = tags_field.vocab.stoi['<pad>']\n",
+    "\n",
     "model = IntentClassifierModel(vocab_size=len(tokens_field.vocab), intents_count=len(intent_field.vocab)).to(DEVICE)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss().to(DEVICE)\n",
@@ -310,14 +318,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Test: Loss = 0.35753, Accuracy = 94.74%: 100%|██████████| 7/7 [00:00<00:00, 134.62it/s]\n"
+      "Test: Loss = 0.33423, Accuracy = 94.85%: 100%|██████████| 7/7 [00:00<00:00, 85.33it/s]\n"
      ]
     }
    ],
