--- a/TokenTaggerModel.ipynb
+++ b/TokenTaggerModel.ipynb
@@ -22,16 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Study\\Dialogue_systems\\env\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,73 +255,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[1 / 30] Train: Loss = 1.55194, Accuracy = 70.88%: 100%|██████████| 140/140 [00:01<00:00, 78.78it/s]\n",
-      "[1 / 30]   Val: Loss = 0.83132, Accuracy = 81.73%: 100%|██████████| 4/4 [00:00<00:00, 74.08it/s]\n",
-      "[2 / 30] Train: Loss = 0.63961, Accuracy = 85.89%: 100%|██████████| 140/140 [00:01<00:00, 83.14it/s]\n",
-      "[2 / 30]   Val: Loss = 0.47160, Accuracy = 90.34%: 100%|██████████| 4/4 [00:00<00:00, 71.43it/s]\n",
-      "[3 / 30] Train: Loss = 0.38081, Accuracy = 91.60%: 100%|██████████| 140/140 [00:01<00:00, 83.33it/s]\n",
-      "[3 / 30]   Val: Loss = 0.30639, Accuracy = 93.32%: 100%|██████████| 4/4 [00:00<00:00, 76.92it/s]\n",
-      "[4 / 30] Train: Loss = 0.25671, Accuracy = 94.20%: 100%|██████████| 140/140 [00:01<00:00, 83.23it/s]\n",
-      "[4 / 30]   Val: Loss = 0.22243, Accuracy = 94.70%: 100%|██████████| 4/4 [00:00<00:00, 74.07it/s]\n",
-      "[5 / 30] Train: Loss = 0.18549, Accuracy = 95.74%: 100%|██████████| 140/140 [00:01<00:00, 83.93it/s]\n",
-      "[5 / 30]   Val: Loss = 0.17797, Accuracy = 95.84%: 100%|██████████| 4/4 [00:00<00:00, 68.97it/s]\n",
-      "[6 / 30] Train: Loss = 0.14612, Accuracy = 96.69%: 100%|██████████| 140/140 [00:01<00:00, 84.49it/s]\n",
-      "[6 / 30]   Val: Loss = 0.15042, Accuracy = 96.28%: 100%|██████████| 4/4 [00:00<00:00, 75.47it/s]\n",
-      "[7 / 30] Train: Loss = 0.11575, Accuracy = 97.33%: 100%|██████████| 140/140 [00:01<00:00, 83.63it/s]\n",
-      "[7 / 30]   Val: Loss = 0.12139, Accuracy = 97.26%: 100%|██████████| 4/4 [00:00<00:00, 71.43it/s]\n",
-      "[8 / 30] Train: Loss = 0.09361, Accuracy = 97.79%: 100%|██████████| 140/140 [00:01<00:00, 81.68it/s]\n",
-      "[8 / 30]   Val: Loss = 0.10544, Accuracy = 97.70%: 100%|██████████| 4/4 [00:00<00:00, 64.52it/s]\n",
-      "[9 / 30] Train: Loss = 0.07714, Accuracy = 98.23%: 100%|██████████| 140/140 [00:01<00:00, 85.47it/s]\n",
-      "[9 / 30]   Val: Loss = 0.09555, Accuracy = 98.02%: 100%|██████████| 4/4 [00:00<00:00, 74.03it/s]\n",
-      "[10 / 30] Train: Loss = 0.06477, Accuracy = 98.49%: 100%|██████████| 140/140 [00:01<00:00, 86.42it/s]\n",
-      "[10 / 30]   Val: Loss = 0.09271, Accuracy = 97.93%: 100%|██████████| 4/4 [00:00<00:00, 71.43it/s]\n",
-      "[11 / 30] Train: Loss = 0.05515, Accuracy = 98.73%: 100%|██████████| 140/140 [00:01<00:00, 85.68it/s]\n",
-      "[11 / 30]   Val: Loss = 0.08052, Accuracy = 98.19%: 100%|██████████| 4/4 [00:00<00:00, 72.73it/s]\n",
-      "[12 / 30] Train: Loss = 0.04978, Accuracy = 98.82%: 100%|██████████| 140/140 [00:01<00:00, 86.90it/s]\n",
-      "[12 / 30]   Val: Loss = 0.07274, Accuracy = 98.28%: 100%|██████████| 4/4 [00:00<00:00, 74.08it/s]\n",
-      "[13 / 30] Train: Loss = 0.04310, Accuracy = 98.99%: 100%|██████████| 140/140 [00:01<00:00, 86.21it/s]\n",
-      "[13 / 30]   Val: Loss = 0.07381, Accuracy = 98.21%: 100%|██████████| 4/4 [00:00<00:00, 83.39it/s]\n",
-      "[14 / 30] Train: Loss = 0.03629, Accuracy = 99.13%: 100%|██████████| 140/140 [00:01<00:00, 85.31it/s]\n",
-      "[14 / 30]   Val: Loss = 0.06820, Accuracy = 98.39%: 100%|██████████| 4/4 [00:00<00:00, 76.92it/s]\n",
-      "[15 / 30] Train: Loss = 0.03272, Accuracy = 99.19%: 100%|██████████| 140/140 [00:01<00:00, 86.63it/s]\n",
-      "[15 / 30]   Val: Loss = 0.06692, Accuracy = 98.33%: 100%|██████████| 4/4 [00:00<00:00, 75.47it/s]\n",
-      "[16 / 30] Train: Loss = 0.02730, Accuracy = 99.32%: 100%|██████████| 140/140 [00:01<00:00, 88.38it/s]\n",
-      "[16 / 30]   Val: Loss = 0.06718, Accuracy = 98.35%: 100%|██████████| 4/4 [00:00<00:00, 83.32it/s]\n",
-      "[17 / 30] Train: Loss = 0.02545, Accuracy = 99.39%: 100%|██████████| 140/140 [00:01<00:00, 88.27it/s]\n",
-      "[17 / 30]   Val: Loss = 0.06169, Accuracy = 98.51%: 100%|██████████| 4/4 [00:00<00:00, 75.47it/s]\n",
-      "[18 / 30] Train: Loss = 0.02183, Accuracy = 99.48%: 100%|██████████| 140/140 [00:01<00:00, 87.39it/s]\n",
-      "[18 / 30]   Val: Loss = 0.06420, Accuracy = 98.56%: 100%|██████████| 4/4 [00:00<00:00, 81.63it/s]\n",
-      "[19 / 30] Train: Loss = 0.02004, Accuracy = 99.50%: 100%|██████████| 140/140 [00:01<00:00, 86.79it/s]\n",
-      "[19 / 30]   Val: Loss = 0.06502, Accuracy = 98.49%: 100%|██████████| 4/4 [00:00<00:00, 83.33it/s]\n",
-      "[20 / 30] Train: Loss = 0.01725, Accuracy = 99.58%: 100%|██████████| 140/140 [00:01<00:00, 86.63it/s]\n",
-      "[20 / 30]   Val: Loss = 0.06288, Accuracy = 98.49%: 100%|██████████| 4/4 [00:00<00:00, 81.64it/s]\n",
-      "[21 / 30] Train: Loss = 0.01671, Accuracy = 99.58%: 100%|██████████| 140/140 [00:01<00:00, 85.73it/s]\n",
-      "[21 / 30]   Val: Loss = 0.05744, Accuracy = 98.67%: 100%|██████████| 4/4 [00:00<00:00, 60.60it/s]\n",
-      "[22 / 30] Train: Loss = 0.01453, Accuracy = 99.63%: 100%|██████████| 140/140 [00:01<00:00, 83.09it/s]\n",
-      "[22 / 30]   Val: Loss = 0.05985, Accuracy = 98.56%: 100%|██████████| 4/4 [00:00<00:00, 81.63it/s]\n",
-      "[23 / 30] Train: Loss = 0.01602, Accuracy = 99.59%: 100%|██████████| 140/140 [00:01<00:00, 81.68it/s]\n",
-      "[23 / 30]   Val: Loss = 0.06109, Accuracy = 98.53%: 100%|██████████| 4/4 [00:00<00:00, 81.63it/s]\n",
-      "[24 / 30] Train: Loss = 0.01251, Accuracy = 99.71%: 100%|██████████| 140/140 [00:01<00:00, 82.79it/s]\n",
-      "[24 / 30]   Val: Loss = 0.06111, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 74.07it/s]\n",
-      "[25 / 30] Train: Loss = 0.01216, Accuracy = 99.70%: 100%|██████████| 140/140 [00:01<00:00, 83.14it/s]\n",
-      "[25 / 30]   Val: Loss = 0.06329, Accuracy = 98.54%: 100%|██████████| 4/4 [00:00<00:00, 76.92it/s]\n",
-      "[26 / 30] Train: Loss = 0.01092, Accuracy = 99.70%: 100%|██████████| 140/140 [00:01<00:00, 82.74it/s]\n",
-      "[26 / 30]   Val: Loss = 0.06038, Accuracy = 98.68%: 100%|██████████| 4/4 [00:00<00:00, 81.63it/s]\n",
-      "[27 / 30] Train: Loss = 0.01001, Accuracy = 99.76%: 100%|██████████| 140/140 [00:01<00:00, 83.14it/s]\n",
-      "[27 / 30]   Val: Loss = 0.06240, Accuracy = 98.70%: 100%|██████████| 4/4 [00:00<00:00, 78.43it/s]\n",
-      "[28 / 30] Train: Loss = 0.00928, Accuracy = 99.78%: 100%|██████████| 140/140 [00:01<00:00, 83.04it/s]\n",
-      "[28 / 30]   Val: Loss = 0.05739, Accuracy = 98.74%: 100%|██████████| 4/4 [00:00<00:00, 67.80it/s]\n",
-      "[29 / 30] Train: Loss = 0.00895, Accuracy = 99.79%: 100%|██████████| 140/140 [00:01<00:00, 82.11it/s]\n",
-      "[29 / 30]   Val: Loss = 0.05966, Accuracy = 98.77%: 100%|██████████| 4/4 [00:00<00:00, 85.10it/s]\n",
-      "[30 / 30] Train: Loss = 0.00799, Accuracy = 99.82%: 100%|██████████| 140/140 [00:01<00:00, 84.19it/s]\n",
-      "[30 / 30]   Val: Loss = 0.05937, Accuracy = 98.74%: 100%|██████████| 4/4 [00:00<00:00, 76.92it/s]\n"
+      "[1 / 30] Train: Loss = 1.54315, Accuracy = 71.26%: 100%|██████████| 140/140 [00:01<00:00, 74.55it/s]\n",
+      "[1 / 30]   Val: Loss = 0.82720, Accuracy = 81.87%: 100%|██████████| 4/4 [00:00<00:00, 61.54it/s]\n",
+      "[2 / 30] Train: Loss = 0.63450, Accuracy = 86.09%: 100%|██████████| 140/140 [00:01<00:00, 81.82it/s]\n",
+      "[2 / 30]   Val: Loss = 0.45834, Accuracy = 89.99%: 100%|██████████| 4/4 [00:00<00:00, 72.73it/s]\n",
+      "[3 / 30] Train: Loss = 0.38293, Accuracy = 91.46%: 100%|██████████| 140/140 [00:02<00:00, 64.37it/s]\n",
+      "[3 / 30]   Val: Loss = 0.29926, Accuracy = 93.06%: 100%|██████████| 4/4 [00:00<00:00, 38.10it/s]\n",
+      "[4 / 30] Train: Loss = 0.26553, Accuracy = 93.78%: 100%|██████████| 140/140 [00:02<00:00, 52.08it/s]\n",
+      "[4 / 30]   Val: Loss = 0.21841, Accuracy = 94.91%: 100%|██████████| 4/4 [00:00<00:00, 37.04it/s]\n",
+      "[5 / 30] Train: Loss = 0.19734, Accuracy = 95.37%: 100%|██████████| 140/140 [00:02<00:00, 52.45it/s]\n",
+      "[5 / 30]   Val: Loss = 0.17160, Accuracy = 95.93%: 100%|██████████| 4/4 [00:00<00:00, 37.88it/s]\n",
+      "[6 / 30] Train: Loss = 0.15212, Accuracy = 96.49%: 100%|██████████| 140/140 [00:02<00:00, 52.63it/s]\n",
+      "[6 / 30]   Val: Loss = 0.13974, Accuracy = 96.56%: 100%|██████████| 4/4 [00:00<00:00, 38.46it/s]\n",
+      "[7 / 30] Train: Loss = 0.12287, Accuracy = 97.15%: 100%|██████████| 140/140 [00:02<00:00, 52.22it/s]\n",
+      "[7 / 30]   Val: Loss = 0.11898, Accuracy = 97.16%: 100%|██████████| 4/4 [00:00<00:00, 36.36it/s]\n",
+      "[8 / 30] Train: Loss = 0.10149, Accuracy = 97.68%: 100%|██████████| 140/140 [00:02<00:00, 52.29it/s]\n",
+      "[8 / 30]   Val: Loss = 0.11090, Accuracy = 97.30%: 100%|██████████| 4/4 [00:00<00:00, 34.78it/s]\n",
+      "[9 / 30] Train: Loss = 0.08423, Accuracy = 98.05%: 100%|██████████| 140/140 [00:02<00:00, 52.25it/s]\n",
+      "[9 / 30]   Val: Loss = 0.08801, Accuracy = 97.97%: 100%|██████████| 4/4 [00:00<00:00, 38.46it/s]\n",
+      "[10 / 30] Train: Loss = 0.06923, Accuracy = 98.41%: 100%|██████████| 140/140 [00:02<00:00, 51.58it/s]\n",
+      "[10 / 30]   Val: Loss = 0.07836, Accuracy = 97.97%: 100%|██████████| 4/4 [00:00<00:00, 36.04it/s]\n",
+      "[11 / 30] Train: Loss = 0.05795, Accuracy = 98.63%: 100%|██████████| 140/140 [00:02<00:00, 52.29it/s]\n",
+      "[11 / 30]   Val: Loss = 0.07336, Accuracy = 98.21%: 100%|██████████| 4/4 [00:00<00:00, 37.39it/s]\n",
+      "[12 / 30] Train: Loss = 0.05112, Accuracy = 98.77%: 100%|██████████| 140/140 [00:02<00:00, 51.44it/s]\n",
+      "[12 / 30]   Val: Loss = 0.06753, Accuracy = 98.33%: 100%|██████████| 4/4 [00:00<00:00, 38.09it/s]\n",
+      "[13 / 30] Train: Loss = 0.04370, Accuracy = 98.98%: 100%|██████████| 140/140 [00:02<00:00, 52.18it/s]\n",
+      "[13 / 30]   Val: Loss = 0.06372, Accuracy = 98.35%: 100%|██████████| 4/4 [00:00<00:00, 35.40it/s]\n",
+      "[14 / 30] Train: Loss = 0.03792, Accuracy = 99.06%: 100%|██████████| 140/140 [00:02<00:00, 52.06it/s]\n",
+      "[14 / 30]   Val: Loss = 0.06823, Accuracy = 98.30%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
+      "[15 / 30] Train: Loss = 0.03379, Accuracy = 99.17%: 100%|██████████| 140/140 [00:02<00:00, 51.88it/s]\n",
+      "[15 / 30]   Val: Loss = 0.06400, Accuracy = 98.37%: 100%|██████████| 4/4 [00:00<00:00, 39.59it/s]\n",
+      "[16 / 30] Train: Loss = 0.02908, Accuracy = 99.29%: 100%|██████████| 140/140 [00:02<00:00, 51.90it/s]\n",
+      "[16 / 30]   Val: Loss = 0.05815, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 37.39it/s]\n",
+      "[17 / 30] Train: Loss = 0.02626, Accuracy = 99.34%: 100%|██████████| 140/140 [00:02<00:00, 51.86it/s]\n",
+      "[17 / 30]   Val: Loss = 0.05809, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 37.38it/s]\n",
+      "[18 / 30] Train: Loss = 0.02481, Accuracy = 99.39%: 100%|██████████| 140/140 [00:02<00:00, 51.97it/s]\n",
+      "[18 / 30]   Val: Loss = 0.05538, Accuracy = 98.81%: 100%|██████████| 4/4 [00:00<00:00, 36.04it/s]\n",
+      "[19 / 30] Train: Loss = 0.02098, Accuracy = 99.47%: 100%|██████████| 140/140 [00:02<00:00, 52.38it/s]\n",
+      "[19 / 30]   Val: Loss = 0.05566, Accuracy = 98.70%: 100%|██████████| 4/4 [00:00<00:00, 39.22it/s]\n",
+      "[20 / 30] Train: Loss = 0.01945, Accuracy = 99.52%: 100%|██████████| 140/140 [00:02<00:00, 51.93it/s]\n",
+      "[20 / 30]   Val: Loss = 0.05417, Accuracy = 98.70%: 100%|██████████| 4/4 [00:00<00:00, 36.69it/s]\n",
+      "[21 / 30] Train: Loss = 0.01738, Accuracy = 99.54%: 100%|██████████| 140/140 [00:02<00:00, 51.93it/s]\n",
+      "[21 / 30]   Val: Loss = 0.05199, Accuracy = 98.81%: 100%|██████████| 4/4 [00:00<00:00, 35.71it/s]\n",
+      "[22 / 30] Train: Loss = 0.01570, Accuracy = 99.61%: 100%|██████████| 140/140 [00:02<00:00, 51.08it/s]\n",
+      "[22 / 30]   Val: Loss = 0.05416, Accuracy = 98.70%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
+      "[23 / 30] Train: Loss = 0.01327, Accuracy = 99.67%: 100%|██████████| 140/140 [00:02<00:00, 52.45it/s]\n",
+      "[23 / 30]   Val: Loss = 0.05253, Accuracy = 98.90%: 100%|██████████| 4/4 [00:00<00:00, 40.82it/s]\n",
+      "[24 / 30] Train: Loss = 0.01184, Accuracy = 99.74%: 100%|██████████| 140/140 [00:02<00:00, 51.88it/s]\n",
+      "[24 / 30]   Val: Loss = 0.05137, Accuracy = 99.04%: 100%|██████████| 4/4 [00:00<00:00, 36.69it/s]\n",
+      "[25 / 30] Train: Loss = 0.01198, Accuracy = 99.71%: 100%|██████████| 140/140 [00:02<00:00, 51.66it/s]\n",
+      "[25 / 30]   Val: Loss = 0.05105, Accuracy = 98.95%: 100%|██████████| 4/4 [00:00<00:00, 37.38it/s]\n",
+      "[26 / 30] Train: Loss = 0.01082, Accuracy = 99.74%: 100%|██████████| 140/140 [00:02<00:00, 51.97it/s]\n",
+      "[26 / 30]   Val: Loss = 0.05147, Accuracy = 98.93%: 100%|██████████| 4/4 [00:00<00:00, 37.04it/s]\n",
+      "[27 / 30] Train: Loss = 0.00972, Accuracy = 99.79%: 100%|██████████| 140/140 [00:02<00:00, 52.24it/s]\n",
+      "[27 / 30]   Val: Loss = 0.05577, Accuracy = 98.79%: 100%|██████████| 4/4 [00:00<00:00, 38.84it/s]\n",
+      "[28 / 30] Train: Loss = 0.00964, Accuracy = 99.75%: 100%|██████████| 140/140 [00:02<00:00, 51.03it/s]\n",
+      "[28 / 30]   Val: Loss = 0.05287, Accuracy = 98.82%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
+      "[29 / 30] Train: Loss = 0.00956, Accuracy = 99.76%: 100%|██████████| 140/140 [00:02<00:00, 51.39it/s]\n",
+      "[29 / 30]   Val: Loss = 0.05277, Accuracy = 98.97%: 100%|██████████| 4/4 [00:00<00:00, 39.60it/s]\n",
+      "[30 / 30] Train: Loss = 0.00805, Accuracy = 99.80%: 100%|██████████| 140/140 [00:02<00:00, 51.30it/s]\n",
+      "[30 / 30]   Val: Loss = 0.05069, Accuracy = 99.09%: 100%|██████████| 4/4 [00:00<00:00, 38.09it/s]\n"
      ]
     }
    ],
@@ -332,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Test: Loss = 0.13770, Accuracy = 97.86%: 100%|██████████| 7/7 [00:00<00:00, 93.33it/s]\n"
+      "Test: Loss = 0.14732, Accuracy = 97.78%: 100%|██████████| 7/7 [00:00<00:00, 33.18it/s]\n"
      ]
     }
    ],
@@ -351,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision = 95.08%, Recall = 94.87%, F1 = 94.97%\n"
+      "Precision = 95.18%, Recall = 94.57%, F1 = 94.88%\n"
      ]
     }
    ],
@@ -393,14 +401,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Test: Loss = 7.35298, Accuracy = 97.76%: 100%|██████████| 7/7 [00:00<00:00, 30.18it/s]\n"
+      "Test: Loss = 6.38924, Accuracy = 97.75%: 100%|██████████| 7/7 [00:00<00:00, 35.90it/s]\n"
      ]
     }
    ],
